force-app/main/default/objects/Voice_User_List__c/Voice_User_List__c.object-meta.xml
<CustomObject>
    <description>Voice - Account User List - WCSA</description>
    <label>V: Company User List</label>
    <nameField>
        <displayFormat>VUL-{00000000}</displayFormat>
        <label>User List</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>V: Company Users List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>