force-app/main/default/objects/Voice_User_List__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Voice - WCSA - Company User - Contact Record</description>
    <inlineHelpText>Voice - WCSA - Company User - Contact Record</inlineHelpText>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Voice_Company_Users_List</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>