force-app/main/default/objects/Voice_User_List__c/fields/User_Key_Match__c.field-meta.xml
<CustomField>
    <fullName>User_Key_Match__c</fullName>
    <description>Voice - WCSA - External ID &amp; Matching Field to Prevent Duplicates</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - External ID &amp; Matching Field to Prevent Duplicates</inlineHelpText>
    <label>User Key: Match</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>