force-app/main/default/objects/Voice_User_List__c/fields/User_List_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>User_List_Email_Address__c</fullName>
    <description>Voice - User email address</description>
    <formula>Name__r.Email</formula>
    <inlineHelpText>Voice - User email address - Not correctly connected!</inlineHelpText>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>