force-app/main/default/objects/Voice_User_List__c/fields/User_List_Key__c.field-meta.xml
<CustomField>
    <fullName>User_List_Key__c</fullName>
    <description>Voice - User List - User status = Active</description>
    <inlineHelpText>Voice - User List - User status = Active</inlineHelpText>
    <label>User Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Rebilling Failed</fullName>
            </value>
            <value>
                <fullName>Sent to Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>