force-app/main/default/objects/Voice_User_List__c/fields/User_List_User_Key_del__c.field-meta.xml
<CustomField>
    <fullName>User_List_User_Key_del__c</fullName>
    <description>Voice - Not correctly connected!</description>
    <formula>Account__r.Company_Key__c</formula>
    <inlineHelpText>Voice - Not correctly connected!</inlineHelpText>
    <label>User List - User Key</label>
    <type>Text</type>
</CustomField>